--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   <packaging>war</packaging>
   <name>DDDSample</name>
   <version>1.1.0</version>
-  <description>This application shows a few key concepts of
-    Domain Driven Design implemented in Enterprise Java.
+  <description>This application shows a few key concepts of the
+    Domain Driven Design technique implemented in Enterprise Java.
   </description>
   <url>http://dddsample.sourceforge.net</url>
   <distributionManagement>
